--- a/src/components/NavComponent/NavComponent.css
+++ b/src/components/NavComponent/NavComponent.css
@@ -49,7 +49,8 @@ nav .logo img {
 
 .nav-menu li a{
     padding: 20px;
-    width: 100%;
+    display: inline-block;
+    min-width: 150px;
     text-align: center;
     border: 2px solid var(--grey15);
     border-radius: 12px;
