--- a/src/components/NavComponent/NavComponent.css
+++ b/src/components/NavComponent/NavComponent.css
@@ -75,7 +75,7 @@ nav .logo img {
     list-style: none;
     flex-direction: column;
     justify-content: center;
-    gap: 6%;
+    gap: 10px;
     align-items: center;
     padding: 10% 32px;
     transform: translate(-100%, 62px);
